# GameFlow-Analytics-Backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
Archive/: Dockerfile  Dockerfile2  docker-compose-2.yml  load-data-to-gcp-multiple.py  sql_scripts.sql
airflow/: Dockerfile  requirements.txt
airflow/dags/: api-ingest-bk.py  api-ingest.py  api_ingest_leagues.py  bigquery_external_tables.py  dbt.py  dbt_local.py  dbt_new.pyp  gcs-to-bigquery.py  hello-dag-2.py  hello-dag.py  load-data-to-gcp-multiple.py  load-data-to-gcp.py  spark_raw_to_processed.py
airflow/scripts/: entrypoint.sh  gcp_assets_and_iam.sh
bigquery/: create_datasets.sql  create_external_tables.sql
dbt_gameflow/: .user.yml  dbt_project.yml  explore.ipynb  profiles.yml
dbt_gameflow/data/: f1_2026_races.csv  f1_australia_2026_result.csv  f1_season_2026.csv  f1_season_2026.parquet  leagues.parquet
dbt_gameflow/models/mart/: grandprix.sql  mart_models.yml  most_leagues_in_sport.sql  schema.yaml  schema.yml
dbt_gameflow/models/source/: sources.yaml  sources.yml
dbt_gameflow/models/staging/: staging_models.yml  stg_event_stats.sql  stg_event_timeline.sql  stg_events.sql  stg_leagues.sql  stg_players.sql  stg_seasons.sql  stg_teams.sql
dbt_gameflow/setup/: create_dataset.sh  dtb_run_most_leagues_in_sport.sh  upload_data.sh
ingestion/: __init__.py  api_extractors copy.py  api_extractors.py  f1_data_extract.py
spark_jobs/src/: event_job.py  event_timeline.py  leagues_job.py  move_and_transform.py  players_job.py  seasons_job.py  teams_job.py
(+7 files in other folders)
