[project]
name = "gameflow-analytics-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Louise Dantas",email = "louisermdantas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
