[tool.poetry]
name = "gameflow-analytics-backend"
version = "0.1.0"
description = ""
authors = ["Louise Dantas <louisermdantas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
apache-airflow = "^2.10.4"
psycopg2-binary = "^2.9.10"
apache-airflow-providers-postgres = "^6.0.0"
apache-airflow-providers-google = "^12.0.0"
pendulum = "^3.0.0"
pandas = ">=2.1.2,<2.2"
jupyter = "^1.1.1"
notebook = "^7.5.3"
requests = "^2.32.0"
dbt-bigquery = ">=1.11.1,<2.0.0"
airflow-dbt="0.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
